--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
