--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@ngrx/store": "^19.0.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
